header items alignment correction for beauty

--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@ body {
     margin: 0px;
 }
 
-
-
 header {
     background-color: rgb(255, 255, 218);
     border-right: 20px solid rgb(209, 209, 20);;
@@ -16,14 +14,20 @@ header {
 }
 #headeritems {
     display: flex;
+    margin-top: 127px;
+    
 }
 #logopic {
     height: 60px;
     width: 200px;
 }
 
+h1 {
+    font-size: 40px;
+    margin-top: -20px;
+}
+
 #searchbar {
-    margin-top: 127px;
     margin-bottom: 8px;
     margin-left: auto;
     margin-right: 8px;
